--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "prebuild": "npm run clean",
     "build": "babel --copy-files --out-dir lib/ src/",
     "preversion": "npm run test",
-    "postversion": "node lib/index.js && git push origin master --tags",
+    "postversion": "node lib/index.js && git push --follow-tags",
     "test": "npm run build && node lib/test/index.js"
   },
   "dependencies": {
