--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "test": "npm run build && node lib/test/index.js"
   },
   "dependencies": {
+    "pkg-up": "1.0.0",
     "semver": "5.2.0"
   },
   "devDependencies": {
