--- a/package.json
+++ b/package.json
@@ -34,15 +34,15 @@
     "test": "npm run build && node lib/test/index.js"
   },
   "dependencies": {
-    "pkg-up": "1.0.0",
-    "semver": "5.2.0"
+    "pkg-up": "^1.0.0",
+    "semver": "^5.2.0"
   },
   "devDependencies": {
-    "babel": "6.5.2",
-    "babel-cli": "6.10.1",
-    "babel-preset-es2015": "6.9.0",
-    "babel-preset-stage-0": "6.5.0",
-    "shx": "0.1.2",
-    "tape": "4.6.0"
+    "babel": "^6.5.2",
+    "babel-cli": "^6.10.1",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "shx": "^0.1.2",
+    "tape": "^4.6.0"
   }
 }
